--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "sonner": "^1.4.41",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
