--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=java
 # ===============================
 # Set here configurations for the database connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.username=maycom
+spring.datasource.password=2211
 spring.datasource.driver-class-name=org.postgresql.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
